--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
   flex-direction: row; }
   .lines hr {
     border-bottom: 1px solid #fff;
-    width: 100%; }
+    width: 30%; }
   .lines span {
     padding: 1.5rem; }
 
@@ -250,14 +250,153 @@
       height: 200px;
       background: #eee; }
 
+.ani_tit[data-scroll="out"],
+.heading span[data-scroll="out"] {
+  position: relative;
+  opacity: 0;
+  -webkit-transform-origin: bottom;
+  -ms-transform-origin: bottom;
+  transform-origin: bottom;
+  -webkit-transform: translateY(100%);
+  -ms-transform: translateY(100%);
+  transform: translateY(100%); }
+
+.ani_tit[data-scroll="in"],
+.heading span[data-scroll="in"] {
+  -webkit-transform: translateY(0);
+  -ms-transform: translateY(0);
+  transform: translateY(0);
+  opacity: 1;
+  -webkit-animation-delay: 0s;
+  animation-delay: 0s;
+  -webkit-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s; }
+
+.heading h2[data-scroll="out"] {
+  position: relative;
+  opacity: 0;
+  -webkit-transform-origin: bottom;
+  -ms-transform-origin: bottom;
+  transform-origin: bottom;
+  -webkit-transform: translateY(100%);
+  -ms-transform: translateY(100%);
+  transform: translateY(100%); }
+
+.heading h2[data-scroll="in"] {
+  -webkit-transform: translateY(0);
+  -ms-transform: translateY(0);
+  transform: translateY(0);
+  opacity: 1;
+  -webkit-animation-delay: 0.5s;
+  animation-delay: 0.5s;
+  -webkit-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s; }
+
+.heading h2[data-scroll="out"]:after {
+  opacity: 0;
+  -webkit-transform: translateY(100%);
+  -ms-transform: translateY(100%);
+  transform: translateY(100%); }
+
+.heading h2[data-scroll="in"]:after {
+  -webkit-transform: translateY(0);
+  -ms-transform: translateY(0);
+  transform: translateY(0);
+  opacity: 1; }
+
+.ani_btn[data-scroll="out"] {
+  position: relative;
+  opacity: 0;
+  -webkit-transform-origin: bottom;
+  -ms-transform-origin: bottom;
+  transform-origin: bottom;
+  -webkit-transform: translateY(100%);
+  -ms-transform: translateY(100%);
+  transform: translateY(100%); }
+
+.ani_btn[data-scroll="in"] {
+  -webkit-transform: translateY(0);
+  -ms-transform: translateY(0);
+  transform: translateY(0);
+  opacity: 1;
+  -webkit-animation-delay: 1s;
+  animation-delay: 1s;
+  -webkit-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s; }
+
+.ani_conts {
+  -webkit-animation-duration: 0.8s;
+  animation-duration: 0.8s; }
+  .ani_conts[data-scroll="out"] {
+    position: relative;
+    opacity: 0;
+    -webkit-transform-origin: bottom;
+    -ms-transform-origin: bottom;
+    transform-origin: bottom;
+    -webkit-transform: translateY(100%);
+    -ms-transform: translateY(100%);
+    transform: translateY(100%); }
+  .ani_conts[data-scroll="in"] {
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
+    -webkit-animation-delay: 1s;
+    animation-delay: 1s;
+    -webkit-transition: 0.4s;
+    -o-transition: 0.4s;
+    transition: 0.4s; }
+
+#index_page .right_content p[data-scroll="out"] {
+  position: relative;
+  opacity: 0;
+  -webkit-transform-origin: bottom;
+  -ms-transform-origin: bottom;
+  transform-origin: bottom;
+  -webkit-transform: translateY(100%);
+  -ms-transform: translateY(100%);
+  transform: translateY(100%); }
+
+#index_page .right_content p[data-scroll="in"] {
+  -webkit-transform: translateY(0);
+  -ms-transform: translateY(0);
+  transform: translateY(0);
+  opacity: 1;
+  -webkit-animation-delay: 1s;
+  animation-delay: 1s;
+  -webkit-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s; }
+
+.ani_conts.menu_list[data-scroll="out"],
+.main_notice .right.ani_conts[data-scroll="out"],
+.main_notice .left.ani_conts[data-scroll="out"] {
+  -webkit-transform: translateY(0);
+  -ms-transform: translateY(0);
+  transform: translateY(0); }
+
+.ani_conts.menu_list[data-scroll="in"],
+.main_notice .right.ani_conts[data-scroll="in"],
+.main_notice .left.ani_conts[data-scroll="in"] {
+  -webkit-transition: 1s;
+  -o-transition: 1s;
+  transition: 1s; }
+
 * {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
+html {
+  position: relative; }
+
 body {
-  font-family: "Noto Sans KR", sans-serif; }
+  background: none !important;
+  font-family: "Noto Sans KR", sans-serif !important; }
 
 body,
 html {
@@ -303,10 +442,10 @@ h6 {
 .header_infos {
   max-width: 1100px;
   margin: 0 auto;
+  padding: 4rem 0;
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
-  padding: 4rem 0; }
+  display: flex; }
   .header_infos .item {
     -webkit-box-flex: 1;
     -ms-flex: 1;
@@ -353,12 +492,13 @@ h6 {
   background: #5352ed; }
   .header_nav.stiky {
     position: fixed;
+    z-index: 999;
     top: 0;
     left: 0;
     width: 100%;
-    -webkit-transition: all .3s;
-    -o-transition: all .3s;
-    transition: all .3s;
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
     -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25); }
     .header_nav.stiky ul li {
@@ -366,7 +506,7 @@ h6 {
       .header_nav.stiky ul li a {
         font-size: 1.6rem; }
   .header_nav.stiky.view {
-    position: absolute; }
+    position: absolute !important; }
   .header_nav ul {
     max-width: 1100px;
     margin: 0 auto;
@@ -390,14 +530,20 @@ h6 {
         left: 0;
         bottom: 0;
         width: 100%;
-        opacity: 0;
-        height: 0;
+        overflow: hidden;
         visibility: hidden;
         -webkit-transition: -webkit-transform 0.3s;
         transition: -webkit-transform 0.3s;
         -o-transition: transform 0.3s;
         transition: transform 0.3s;
-        transition: transform 0.3s, -webkit-transform 0.3s; }
+        transition: transform 0.3s, -webkit-transform 0.3s;
+        -webkit-transition: height 0.3s;
+        -o-transition: height 0.3s;
+        transition: height 0.3s;
+        z-index: 100;
+        height: 0;
+        -webkit-transform: translate3d(0, 150%, 0);
+        transform: translate3d(0, 150%, 0); }
         .header_nav ul li ul li {
           position: relative;
           width: 100%;
@@ -413,21 +559,20 @@ h6 {
       @media (min-width: 769px) {
         .header_nav ul li:hover ul {
           visibility: visible;
-          opacity: 1;
           -webkit-transform: translate3d(0, 100%, 0);
           transform: translate3d(0, 100%, 0);
-          height: 100%; } }
+          height: 96px; } }
     .header_nav ul a {
       color: #fff; }
 
-.main_slider {
-  width: 100%;
+.main_slider_content {
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
   height: 100vh;
   color: #fff;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.68)), to(rgba(0, 0, 0, 0.68))), url("images/main_slider.jpg") no-repeat center/cover;
-  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.68), rgba(0, 0, 0, 0.68)), url("images/main_slider.jpg") no-repeat center/cover;
-  background: -o-linear-gradient(rgba(0, 0, 0, 0.68), rgba(0, 0, 0, 0.68)), url("images/main_slider.jpg") no-repeat center/cover;
-  background: linear-gradient(rgba(0, 0, 0, 0.68), rgba(0, 0, 0, 0.68)), url("images/main_slider.jpg") no-repeat center/cover;
+  background: linghten(color(white), 10);
+  text-align: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -437,20 +582,21 @@ h6 {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row; }
-  .main_slider_content {
-    background: linghten(color(white), 10);
-    text-align: center; }
-    .main_slider_content h2 {
-      color: inherit;
-      font-size: 5.5rem;
-      margin-bottom: 2rem; }
-    .main_slider_content p {
-      color: inherit;
-      margin-bottom: 2rem; }
+  -ms-flex-direction: column;
+  flex-direction: column;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.68)), to(rgba(0, 0, 0, 0.68))), url("images/main_slider.jpg") no-repeat center/cover;
+  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.68), rgba(0, 0, 0, 0.68)), url("images/main_slider.jpg") no-repeat center/cover;
+  background: -o-linear-gradient(rgba(0, 0, 0, 0.68), rgba(0, 0, 0, 0.68)), url("images/main_slider.jpg") no-repeat center/cover;
+  background: linear-gradient(rgba(0, 0, 0, 0.68), rgba(0, 0, 0, 0.68)), url("images/main_slider.jpg") no-repeat center/cover; }
+  .main_slider_content h2 {
+    color: inherit;
+    font-size: 5.5rem;
+    margin-bottom: 2rem; }
+  .main_slider_content p {
+    color: inherit;
+    margin-bottom: 2rem; }
 
 .main_intro {
   display: -webkit-box;
@@ -548,6 +694,33 @@ h6 {
 .main_banner {
   height: 300px;
   background: #5352ed; }
+  .main_banner .box_list {
+    max-width: 1100px;
+    margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-line-pack: stretch;
+    align-content: stretch;
+    height: 300px;
+    padding: 4rem 0; }
+    .main_banner .box_list * {
+      color: #fff; }
+    .main_banner .box_list .item {
+      text-align: center; }
+      .main_banner .box_list .item h3 {
+        font-size: 5rem;
+        font-weight: bolder; }
+      .main_banner .box_list .item p {
+        line-height: 2;
+        font-weight: 300;
+        font-size: 1.6rem; }
 
 .new_menus {
   padding: 8rem 0;
@@ -870,10 +1043,10 @@ footer {
   padding: 8.8rem 0;
   max-width: 1100px;
   margin: 0 auto; }
-  .contact .headings {
+  .contact .heading {
     text-align: center;
     margin-bottom: 3rem; }
-    .contact .headings h2 {
+    .contact .heading h2 {
       font-size: 2.8rem;
       font-weight: 500;
       line-height: 1;
@@ -883,22 +1056,22 @@ footer {
       margin-bottom: 3rem;
       display: inline-block;
       line-height: 1.3; }
-      .contact .headings h2:after {
+      .contact .heading h2:after {
         content: '';
         position: absolute;
         left: 0;
         bottom: 0;
         z-index: 10; }
-      .contact .headings h2:after {
+      .contact .heading h2:after {
         width: 5.5rem;
         height: 3px;
         background: #5352ed; }
-      .contact .headings h2.center_line:after {
+      .contact .heading h2.center_line:after {
         left: 50%;
         -webkit-transform: translate(-50%);
         -ms-transform: translate(-50%);
         transform: translate(-50%); }
-    .contact .headings span {
+    .contact .heading span {
       display: block;
       color: #5352ed;
       font-size: 1.8rem; }
@@ -1044,10 +1217,11 @@ footer {
     -ms-grid-row-align: center;
     align-self: center; }
 
-body {
-  position: relative; }
-
 @media (max-width: 768px) {
+  .header_infos .item {
+    display: none; }
+  .header_infos .item.logo {
+    display: block; }
   .header_nav {
     position: fixed;
     top: 0;
@@ -1057,7 +1231,12 @@ body {
     text-align: center;
     -webkit-transform: translate3d(-100%, 0, 0);
     transform: translate3d(-100%, 0, 0);
-    z-index: 50; }
+    z-index: 50;
+    -webkit-transition: -webkit-transform 0.3s;
+    transition: -webkit-transform 0.3s;
+    -o-transition: transform 0.3s;
+    transition: transform 0.3s;
+    transition: transform 0.3s, -webkit-transform 0.3s; }
     .header_nav ul {
       background: #5352ed;
       -webkit-box-orient: vertical;
@@ -1084,19 +1263,21 @@ body {
         .header_nav ul li ul {
           top: 0;
           height: auto;
-          width: 0%;
+          width: 0;
           -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0); }
+          transform: translate3d(0, 0, 0);
+          -webkit-transition: -webkit-transform 0.3s;
+          transition: -webkit-transform 0.3s;
+          -o-transition: transform 0.3s;
+          transition: transform 0.3s;
+          transition: transform 0.3s, -webkit-transform 0.3s; }
           .header_nav ul li ul.view {
             width: 100%;
             opacity: 1;
             visibility: visible;
             -webkit-transform: translate3d(100%, 0, 0);
             transform: translate3d(100%, 0, 0);
-            display: block;
-            -webkit-transition: all 0.3s;
-            -o-transition: all 0.3s;
-            transition: all 0.3s; }
+            display: block; }
     .header_nav:after {
       content: '';
       background: rgba(0, 0, 0, 0);
@@ -1131,4 +1312,153 @@ body {
     height: 30px;
     display: block; }
   .line_menu:hover {
-    background: green; } }
+    background: green; }
+  .main_slider_content_inner {
+    max-width: 70%;
+    margin: 0 auto; }
+  .main_intro {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    padding: 0 0 3rem; }
+    .main_intro .left {
+      width: 100%;
+      max-width: 100%; }
+    .main_intro .right {
+      padding: 0 3%;
+      margin-top: 3%; }
+  .main_ablity {
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    padding: 6.2rem 0; }
+    .main_ablity .item {
+      width: 100%;
+      margin-bottom: 30px;
+      padding: 0 5%; }
+      .main_ablity .item_icon:after {
+        left: 5%; }
+  .main_banner {
+    height: auto;
+    padding: 6.2rem 0; }
+    .main_banner .box_list {
+      height: auto;
+      padding: 2rem 0;
+      padding: 0 3%;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+      .main_banner .box_list .item {
+        margin-bottom: 1.5rem; }
+  .menu_list {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
+    .menu_list li {
+      margin-right: 0;
+      width: 94%; }
+  .main_notice {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: 2.2rem; }
+    .main_notice .more_link {
+      display: none; }
+    .main_notice .heading {
+      width: 100%;
+      text-align: center; }
+      .main_notice .heading h2 {
+        width: 100%;
+        display: block; }
+        .main_notice .heading h2:after {
+          left: 50%;
+          -webkit-transform: translateX(-50%);
+          -ms-transform: translateX(-50%);
+          transform: translateX(-50%); }
+      .main_notice .heading p {
+        display: none; }
+    .main_notice .left {
+      width: 100%;
+      height: 25vh; }
+    .main_notice .right {
+      padding: 3vh 0;
+      -webkit-box-flex: 1;
+      -ms-flex: 1;
+      flex: 1; }
+  .cate_list {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
+    .cate_list li {
+      padding: 0;
+      margin-bottom: 1.2rem;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+  .main_notice.stores .store_list_item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
+    .main_notice.stores .store_list_item .right {
+      width: 100%; }
+  .notice_section {
+    padding: 0;
+    margin: 4.4rem 0; }
+  .notice_list_row {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
+    .notice_list_row span {
+      padding: 0 2.2rem; }
+    .notice_list_row span:first-child {
+      display: none; }
+    .notice_list_row span:last-child {
+      display: none; }
+    .notice_list_row span.num {
+      -webkit-box-flex: 0;
+      -ms-flex: 0;
+      flex: 0;
+      width: 6%; }
+    .notice_list_row span.tit {
+      width: 94%; }
+  .card_list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    padding: 0 3%; }
+    .card_list_item {
+      width: 100%; }
+  .contact .input_row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    padding: 0 3%; }
+  .contact .input_col {
+    width: 100%;
+    margin-bottom: 2.2rem; }
+  .store_infos_item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+    .store_infos_item .sub_tit {
+      display: none; }
+  .heading {
+    padding: 0 3%; } }
